# pico_LCD

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  make_flash_bitmap.py
flash_stream/img/: junk.h  packtiles  text.h  text_small.h  textbox.h
program_flash/: CMakeLists.txt  flash_program.c
test_pattern/: CMakeLists.txt  bt_serial.h  btstack_config.h  test_pattern.c  text.h  userio.h
